objects/Interest__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <formula>TEXT(Interest_Setup__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interests</relationshipLabel>
        <relationshipName>Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <picklist>
            <picklistValues>
                <fullName>Like</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Like</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Setup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interest Setup</label>
        <referenceTo>Interest_Setup__c</referenceTo>
        <relationshipLabel>Interests</relationshipLabel>
        <relationshipName>Interests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Interests</relationshipLabel>
        <relationshipName>Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Interest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Lead__c</columns>
        <columns>Contact__c</columns>
        <columns>Interest_Setup__c</columns>
        <columns>Category__c</columns>
        <columns>Degree__c</columns>
        <columns>Notes__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Interest ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>